base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dotnet-ms
  labels:
    backstage.io/kubernetes-id: dotnet-ms
